# Affective_Substrate_V2

./: .gitignore  CODEX_PROMPT.md  PROGRESS.md  README.md  SPEC.md  main.py  pyproject.toml
artifacts/: gate_results.json  kernel_sweep.json
config/: __init__.py  default.yaml  phase0.yaml  schema.py
scripts/: _common.py  calibrate_injection.py  extract_directions.py  gateA_lyapunov.py  gateB_sensitivity.py  run_bare_substrate.py  sweep_kernel.py
src/: __init__.py
src/affective_substrate_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/analysis/: __init__.py  lyapunov.py  reservoir_probe.py  sensitivity.py  viz.py
src/llm/: __init__.py  directions.py  hooks.py  model_loading.py  projection.py
src/memory/: __init__.py  reservoir.py
src/substrate/: __init__.py  base.py  dual_system.py  hindmarsh_rose.py  kernels.py  mackey_glass.py  state.py
tests/: test_calibrate_mock.py  test_config.py  test_kernels.py  test_model_loading.py  test_projection.py  test_reservoir.py  test_substrate.py
