[project]
name = "affective-substrate-v2"
version = "0.1.0"
description = "Phase 0 dynamical substrate and validation gates"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.14.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "scipy>=1.12",
    "torch>=2.11.0",
    "transformers>=5.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [".", "src"]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
